# cosmic-pomodoro

./: .gitignore  Cargo.toml  README.md  io.github.petar030.cosmic-pomodoro.json  justfile
resources/: app.desktop  app.metainfo.xml
src/: app.rs
src/app/views/: main.rs  settings.rs
src/core/: pomodoro.rs  timer.rs
